# playwright-test-skill

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: prd.md  rfc.md  test.md  working.md
skills/: skill_playwright_test.md
src/playwright_test_skill/: __init__.py  cli.py
tests/: test_cli.py
