[project]
name = "playwright-test-skill"
version = "0.1.0"
description = "CDP step-by-step debugging CLI for AI agents writing Playwright E2E tests"
requires-python = ">=3.10"
dependencies = [
  "playwright>=1.49.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
]

[project.scripts]
pw-test = "playwright_test_skill.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/playwright_test_skill"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"